--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,15 @@ on:
     branches:
       - '**'
 jobs:
-  changelog-update:
-    runs-on: ubuntu-latest
+  check-changelog:
+    name: Changelog
     timeout-minutes: 5
+    runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
     - uses: dangoslen/changelog-enforcer@v2
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v2
