ci(changelog): add changelog reminder (#1764)
* added changelog reminder

* Update CHANGELOG.md

* enforce changelog syntax

* Update ci.yml

* rewording

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,13 @@ on:
     branches:
       - '**'
 jobs:
+  check-changelog:
+    name: Changelog
+    timeout-minutes: 5
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v2
+    - uses: dangoslen/changelog-enforcer@v2
   build:
     runs-on: ubuntu-18.04
     timeout-minutes: 30
