--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "history": "4.10.1",
     "immutable": "4.0.0-rc.9",
     "immutable-devtools": "0.1.5",
+    "inquirer": "8.1.2",
     "js-beautify": "1.14.0",
     "json-file-plus": "3.2.0",
     "otplib": "^12.0.1",
@@ -60,6 +61,7 @@
     "passport-local": "1.0.0",
     "prismjs": "1.24.1",
     "prop-types": "15.7.2",
+    "qrcode": "1.4.4",
     "query-string": "6.14.1",
     "react": "16.14.0",
     "react-ace": "9.4.3",
