--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "inquirer": "8.1.2",
     "js-beautify": "1.14.0",
     "json-file-plus": "3.2.0",
-    "otplib": "^12.0.1",
+    "otplib": "12.0.1",
     "package-json": "6.5.0",
     "parse": "3.3.0",
     "passport": "0.4.1",
