--- a/package.json
+++ b/package.json
@@ -51,14 +51,17 @@
     "history": "4.10.1",
     "immutable": "4.0.0-rc.9",
     "immutable-devtools": "0.1.5",
+    "inquirer": "8.1.2",
     "js-beautify": "1.14.0",
     "json-file-plus": "3.2.0",
+    "otpauth": "7.0.5",
     "package-json": "6.5.0",
     "parse": "3.3.0",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "prismjs": "1.24.1",
     "prop-types": "15.7.2",
+    "qrcode": "1.4.4",
     "query-string": "6.14.1",
     "react": "16.14.0",
     "react-ace": "9.4.3",
