--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
         id: node
         run: |
           $node_major = "${{ matrix.NODE_VERSION }}" | cut -d '.' -f1
-          echo "::set-env name=node_major::$(echo $node_major)"
+          echo "::set-output name=node_major::$(echo $node_major)"
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.NODE_VERSION }}
         uses: actions/setup-node@v1
