--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,14 +56,16 @@ jobs:
   #      - name: Install dependencies
   #        run: npm ci
   #      - run: npm run madge:circular
-  # check-docker:
-  #   name: Docker Build
-  #   timeout-minutes: 5
-  #   runs-on: ubuntu-18.04
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Build docker image
-  #       uses: docker/build-push-action@v2
+  check-docker:
+    name: Docker Build
+    timeout-minutes: 5
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build docker image
+        uses: docker/build-push-action@v2
+          with:
+            platforms: linux/amd64, linux/arm/v6, linux/arm/v7, linux/arm64/v8
   check-lock-file-version:
     name: NPM Lock File Version
     timeout-minutes: 5
@@ -126,5 +128,3 @@ jobs:
         run: ./scripts/before_script.sh
         env:
           CI: true
-      - name: Build docker image
-        uses: docker/build-push-action@v2
