--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "file-loader": "6.0.0",
     "http-server": "0.12.0",
     "jest": "24.8.0",
+    "madge": "5.0.1",
     "marked": "0.8.2",
     "node-sass": "4.13.1",
     "null-loader": "3.0.0",
@@ -122,7 +123,8 @@
     "generate": "node scripts/generate.js",
     "prepare": "webpack --config webpack/publish.config.js --progress",
     "server": "node server.js",
-    "start": "node ./Parse-Dashboard/index.js"
+    "start": "node ./Parse-Dashboard/index.js",
+    "madge:circular": "node_modules/.bin/madge ./src --circular"
   },
   "bin": {
     "parse-dashboard": "./bin/parse-dashboard"
