--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "webpack-cli": "3.3.10"
   },
   "scripts": {
+    "ci:check": "node ./ci/ciCheck.js",
     "dev": "node ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --devtool eval-source-map --progress --watch",
     "dashboard": "node ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --progress --watch",
     "pig": "http-server ./PIG -p 4041 -s & webpack --config webpack/PIG.config.js --progress --watch",
