--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,20 +17,20 @@ jobs:
       - name: Determine major node version
         id: node
         run: |
-          node_major=$(echo "${{ matrix.NODE_VERSION }}" | cut -d'.' -f1)
+          node_major=$(echo "${{ env.NODE_VERSION }}" | cut -d'.' -f1)
           echo "::set-output name=node_major::$(echo $node_major)"
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.NODE_VERSION }}
+      - name: Use Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ env.node-version }}
       - name: Cache Node.js modules
         uses: actions/cache@v2
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node-${{ matrix.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-${{ matrix.NODE_VERSION }}-
+            ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
       - name: Install dependencies (Node < 10)
         run: npm install
         if: ${{ steps.node.outputs.node_major < 10 }}
@@ -52,17 +52,17 @@ jobs:
   #   runs-on: ubuntu-18.04
   #   steps:
   #     - uses: actions/checkout@v2
-  #     - name: Use Node.js ${{ matrix.NODE_VERSION }}
+  #     - name: Use Node.js ${{ env.NODE_VERSION }}
   #       uses: actions/setup-node@v1
   #       with:
-  #         node-version: ${{ matrix.node-version }}
+  #         node-version: ${{ env.node-version }}
   #     - name: Cache Node.js modules
   #       uses: actions/cache@v2
   #       with:
   #         path: ~/.npm
-  #         key: ${{ runner.os }}-node-${{ matrix.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
-  #           ${{ runner.os }}-node-${{ matrix.NODE_VERSION }}-
+  #           ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
   #     - name: Install dependencies
   #       run: npm ci
   #     - run: npm run lint
@@ -72,17 +72,17 @@ jobs:
      runs-on: ubuntu-18.04
      steps:
        - uses: actions/checkout@v2
-       - name: Use Node.js ${{ matrix.NODE_VERSION }}
+       - name: Use Node.js ${{ env.NODE_VERSION }}
          uses: actions/setup-node@v1
          with:
-           node-version: ${{ matrix.node-version }}
+           node-version: ${{ env.node-version }}
        - name: Cache Node.js modules
          uses: actions/cache@v2
          with:
            path: ~/.npm
-           key: ${{ runner.os }}-node-${{ matrix.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+           key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
            restore-keys: |
-             ${{ runner.os }}-node-${{ matrix.NODE_VERSION }}-
+             ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
        - name: Install dependencies
          run: npm ci
        - run: npm run madge:circular
