--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,12 +31,8 @@ jobs:
           key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
-      - name: Install dependencies (Node < 10)
-        run: npm install
-        if: ${{ steps.node.outputs.node_major < 10 }}
-      - name: Install dependencies (Node >= 10)
+      - name: Install dependencies
         run: npm ci
-        if: ${{ steps.node.outputs.node_major >= 10 }}
       - name: CI Self-Check
         run: npm run ci:check
   check-changelog:
@@ -71,21 +67,22 @@ jobs:
      timeout-minutes: 5
      runs-on: ubuntu-18.04
      steps:
-       - uses: actions/checkout@v2
-       - name: Use Node.js ${{ env.NODE_VERSION }}
-         uses: actions/setup-node@v1
-         with:
-           node-version: ${{ env.node-version }}
-       - name: Cache Node.js modules
-         uses: actions/cache@v2
-         with:
-           path: ~/.npm
-           key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
-           restore-keys: |
-             ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
-       - name: Install dependencies
-         run: npm ci
-       - run: npm run madge:circular
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ env.node-version }}
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
+      - name: Install dependencies
+        run: npm ci
+      - name: Scan for circular dependencies
+        run: npm run madge:circular
   check-docker:
     name: Docker Build
     timeout-minutes: 5
