--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "semver": "7.3.4"
   },
   "devDependencies": {
+    "@actions/core": "1.2.6",
     "@babel/core": "7.8.7",
     "@babel/plugin-proposal-decorators": "7.8.3",
     "@babel/plugin-transform-regenerator": "7.8.7",
