--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "style-loader": "1.1.2",
     "svg-prep": "1.0.4",
     "webpack": "4.42.1",
-    "webpack-cli": "3.3.10"
+    "webpack-cli": "3.3.10",
+    "yaml": "1.10.0"
   },
   "scripts": {
     "ci:check": "node ./ci/ciCheck.js",
