--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@babel/plugin-transform-runtime": "7.8.3",
     "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "7.8.3",
+    "all-node-versions": "8.0.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
