--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,10 +101,12 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Build docker image
         uses: docker/build-push-action@v2
-        # with:
-        #   platforms: ${{ matrix.DOCKER_PLATFORM }}
+        with:
+          platforms: ${{ matrix.DOCKER_PLATFORM }}
   check-lock-file-version:
     name: NPM Lock File Version
     timeout-minutes: 5
