--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "eslint-plugin-react": "7.19.0",
     "file-loader": "6.0.0",
     "http-server": "0.12.0",
+    "husky": "7.0.2",
     "jest": "24.8.0",
     "marked": "0.8.2",
     "node-sass": "4.13.1",
