--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
             ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
       - name: Install dependencies
         run: npm ci
-      - name: CI Self-Check
+      - name: CI Environments Check
         run: npm run ci:check
       - name: CI Node Engine Check
         run: npm run ci:checkNodeEngine
@@ -126,13 +126,6 @@ jobs:
     strategy:
       matrix:
         include:
-          # Node versions <12 are added temporarily for CI testing
-          - name: Node 8
-            NODE_VERSION: 8.9.4
-          - name: Node 9
-            NODE_VERSION: 9.11.2
-          - name: Node 10
-            NODE_VERSION: 10.24.1
           - name: Node 12
             NODE_VERSION: 12.22.6
           - name: Node 14
