--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@babel/runtime": "7.15.3",
     "bcryptjs": "2.3.0",
     "body-parser": "1.19.0",
-    "codemirror-graphql": "github:timsuchanek/codemirror-graphql#details-fix",
     "commander": "6.2.1",
     "connect-flash": "0.1.1",
     "cookie-session": "2.0.0-beta.3",
@@ -46,8 +45,8 @@
     "create-react-class": "15.7.0",
     "csurf": "1.11.0",
     "express": "4.17.1",
-    "graphql": "14.6.0",
-    "graphql-playground-react": "1.7.20",
+    "graphiql": "1.4.2",
+    "graphql": "15.5.0",
     "history": "4.10.1",
     "immutable": "4.0.0-rc.9",
     "immutable-devtools": "0.1.5",
