--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,13 @@
-name: release
+name: Release
 on:
-  release:
-    types: [published]
+  push:
+    branches: [ master, alpha, beta ]
 jobs:
-  publish-npm:
-    runs-on: ubuntu-18.04
+  release:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
@@ -19,6 +19,7 @@ jobs:
           restore-keys: |
               ${{ runner.os }}-node-
       - run: npm ci
-      - run: npm publish
+      - run: npx semantic-release
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
