--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parse-dashboard",
-  "version": "2.2.0",
+  "version": "3.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/ParsePlatform/parse-dashboard"
@@ -59,7 +59,7 @@
     "parse": "3.3.0",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
-    "prismjs": "1.24.1",
+    "prismjs": "1.25.0",
     "prop-types": "15.7.2",
     "qrcode": "1.4.4",
     "query-string": "6.14.1",
@@ -72,8 +72,8 @@
     "react-json-view": "1.21.3",
     "react-popper-tooltip": "4.3.0",
     "react-redux": "5.1.2",
-    "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
+    "react-router": "5.2.1",
+    "react-router-dom": "5.2.1",
     "regenerator-runtime": "0.13.8",
     "semver": "7.3.4"
   },
@@ -85,6 +85,12 @@
     "@babel/plugin-transform-runtime": "7.8.3",
     "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "7.8.3",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/commit-analyzer": "8.0.1",
+    "@semantic-release/git": "9.0.0",
+    "@semantic-release/github": "7.2.3",
+    "@semantic-release/npm": "7.1.3",
+    "@semantic-release/release-notes-generator": "9.0.3",
     "all-node-versions": "8.0.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
@@ -108,6 +114,7 @@
     "request": "2.88.2",
     "request-promise": "4.2.5",
     "sass-loader": "10.1.1",
+    "semantic-release": "17.4.6",
     "style-loader": "1.1.2",
     "svg-prep": "1.0.4",
     "webpack": "4.42.1",
@@ -127,7 +134,8 @@
     "generate": "node scripts/generate.js",
     "prepare": "webpack --config webpack/publish.config.js --progress",
     "start": "node ./Parse-Dashboard/index.js",
-    "madge:circular": "node_modules/.bin/madge ./src --circular"
+    "madge:circular": "node_modules/.bin/madge ./src --circular",
+    "semantic-release": "semantic-release"
   },
   "bin": {
     "parse-dashboard": "./bin/parse-dashboard"
