--- a/.github/workflows/release-automated.yml
+++ b/.github/workflows/release-automated.yml
@@ -1,49 +1,58 @@
-name: docker
-
+name: release-automated
 on:
-  # Disabled as we move to new branch model and plan to change the `latest` tag to mean "latest stable" instead of as currently "latest unstable"
-  # schedule:
-  #   # Nightly builds capture upstream updates to dependency images such as node.
-  #   - cron: '19 17 * * *'
   push:
-    # Disabled as we move to new branch model and plan to change the `latest` tag to mean "latest stable" instead of as currently "latest unstable"
-    # branches: [ master ]
-    tags: [ '*.*.*' ]
-
-env:
-  REGISTRY: docker.io
-  IMAGE_NAME: parseplatform/parse-dashboard
-
+    branches: [ master, alpha, beta, next-major ]
 jobs:
-  build:
+  release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+              ${{ runner.os }}-node-
+      - run: npm ci
+      - run: npx semantic-release
+        env:
+          GH_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+  docker:
+    needs: release
+    env:
+      REGISTRY: docker.io
+      IMAGE_NAME: parseplatform/parse-dashboard
     runs-on: ubuntu-18.04
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Determine branch name
         id: branch
         run: echo "::set-output name=branch_name::${GITHUB_REF#refs/*/}"
-
       - name: Checkout repository
         uses: actions/checkout@v2
-
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
       - name: Log into Docker Hub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v3
@@ -51,7 +60,6 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
             latest=${{ steps.branch.outputs.branch_name == 'master' }}
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
