--- a/.github/workflows/release-automated.yml
+++ b/.github/workflows/release-automated.yml
@@ -5,6 +5,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    outputs:
+      current_tag: ${{ steps.tag.outputs.current_tag }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -26,9 +28,13 @@ jobs:
           GH_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Determine tag on current commit
+        id: tag
+        run: echo "::set-output name=current_tag::$(git describe --tags --abbrev=0 --exact-match || echo '')"
 
   docker:
     needs: release
+    if: needs.release.outputs.current_tag != ''
     env:
       REGISTRY: docker.io
       IMAGE_NAME: parseplatform/parse-dashboard
