--- a/.github/workflows/release-manual-docker.yml
+++ b/.github/workflows/release-manual-docker.yml
@@ -1,43 +1,35 @@
+# Trigger this workflow only to manually create a Docker release; this should only be used
+# in extraordinary circumstances, as Docker releases are normally created automatically as
+# part of the automated release workflow.
+
 name: release-manual-docker
-
-# Use this only in extraordinary circumstances to manually create a Docker release.
-# A Docker release is normally created as part of the automated release workflow.
 on: workflow_dispatch
-
 env:
   REGISTRY: docker.io
   IMAGE_NAME: parseplatform/parse-dashboard
-
 jobs:
   build:
-
     runs-on: ubuntu-18.04
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Determine branch name
         id: branch
         run: echo "::set-output name=branch_name::${GITHUB_REF#refs/*/}"
-
       - name: Checkout repository
         uses: actions/checkout@v2
-
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
       - name: Log into Docker Hub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v3
@@ -45,7 +37,6 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
             latest=${{ steps.branch.outputs.branch_name == 'master' }}
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
