--- a/.github/workflows/release-manual-docker.yml
+++ b/.github/workflows/release-manual-docker.yml
@@ -43,7 +43,9 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
-            latest=${{ steps.branch.outputs.branch_name == 'master' }}
+            latest=${{ steps.branch.outputs.branch_name == 'master' && github.event.inputs.ref == '' }}
+          tags: |
+            type=semver,pattern=${{ github.event.inputs.ref }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
