--- a/.github/workflows/release-manual-docker.yml
+++ b/.github/workflows/release-manual-docker.yml
@@ -45,7 +45,8 @@ jobs:
           flavor: |
             latest=${{ steps.branch.outputs.branch_name == 'master' && github.event.inputs.ref == '' }}
           tags: |
-            type=semver,pattern={{version}},value=${{ github.event.inputs.ref }}
+            type=semver,enable=true,priority=900,pattern={{version}},value=${{ github.event.inputs.ref }}
+            type=ref,enable=true,priority=600,event=branch
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
