--- a/.github/workflows/release-manual-docker.yml
+++ b/.github/workflows/release-manual-docker.yml
@@ -45,8 +45,8 @@ jobs:
           flavor: |
             latest=${{ steps.branch.outputs.branch_name == 'master' && github.event.inputs.ref == '' }}
           tags: |
-            type=semver,enable=true,priority=900,pattern={{version}},value=${{ github.event.inputs.ref }}
-            type=raw,enable=${{ github.event.inputs.ref == '' }},priority=600,value=latest
+            type=semver,enable=true,pattern={{version}},value=${{ github.event.inputs.ref }}
+            type=raw,enable=${{ github.event.inputs.ref == '' }},value=latest
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
