--- a/.github/workflows/release-automated-scheduler.yml
+++ b/.github/workflows/release-automated-scheduler.yml
@@ -34,10 +34,11 @@ jobs:
           pr_target: release
           pr_body: |
             # Release
+
             This pull request was created, because a new release is due according to the release cycle of this repository.
             Just resolve any conflicts and it's good to merge. Any version increment will be done by release automation.
-            ### ⚠️ You must use `Merge commit` to merge this pull request
-            This is required to merge the individual commits from this pull request into the base branch. Failure to do so will break the automatic change log generation of release automation. Do not use "Squash and merge"!
+
+            *⚠️ Use `Merge commit` to merge this pull request. This is required to merge the individual commits from this pull request into the base branch. Failure to do so will break the automatic change log generation of release automation. Do not use "Squash and merge"!*
   create-pr-beta:
     runs-on: ubuntu-latest
     needs: create-pr-release
@@ -64,8 +65,9 @@ jobs:
           pr_source: ${{ steps.branch.outputs.name }}
           pr_target: beta
           pr_body: |
-            # Release beta
+            ## Release beta
+
             This pull request was created, because a new release is due according to the release cycle of this repository.
             Just resolve any conflicts and it's good to merge. Any version increment will be done by release automation.
-            ### ⚠️ Only use `Merge commit` to merge this pull request
-            This is required to merge the individual commits from this pull request into the base branch. Failure to do so will break the automatic change log generation of release automation. Do not use "Squash and merge"!
+
+            *⚠️ Use `Merge commit` to merge this pull request. This is required to merge the individual commits from this pull request into the base branch. Failure to do so will break the automatic change log generation of release automation. Do not use "Squash and merge"!*
