--- a/.github/workflows/release-automated-scheduler.yml
+++ b/.github/workflows/release-automated-scheduler.yml
@@ -35,7 +35,7 @@ jobs:
           pr_body: |
             ## Release
 
-            This pull request was created, because a new release is due according to the release cycle of this repository.
+            This pull request was created because a new release is due according to the release cycle of this repository.
             Just resolve any conflicts and it's good to merge. Any version increment will be done by release automation.
 
             *⚠️ Use `Merge commit` to merge this pull request. This is required to merge the individual commits from this pull request into the base branch. Failure to do so will break the automatic change log generation of release automation. Do not use "Squash and merge"!*
@@ -67,7 +67,7 @@ jobs:
           pr_body: |
             ## Release beta
 
-            This pull request was created, because a new release is due according to the release cycle of this repository.
+            This pull request was created because a new release is due according to the release cycle of this repository.
             Just resolve any conflicts and it's good to merge. Any version increment will be done by release automation.
 
             *⚠️ Use `Merge commit` to merge this pull request. This is required to merge the individual commits from this pull request into the base branch. Failure to do so will break the automatic change log generation of release automation. Do not use "Squash and merge"!*
