--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,15 +10,10 @@ env:
   NODE_VERSION: 16.10.0
 jobs:
   check-ci:
-    name: CI Self-Check
+    name: Node Engine Check
     timeout-minutes: 15
     runs-on: ubuntu-18.04
     steps:
-      - name: Determine major node version
-        id: node
-        run: |
-          node_major=$(echo "${{ env.NODE_VERSION }}" | cut -d'.' -f1)
-          echo "::set-output name=node_major::$(echo $node_major)"
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v1
@@ -33,8 +28,6 @@ jobs:
             ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
       - name: Install dependencies
         run: npm ci
-      - name: CI Environments Check
-        run: npm run ci:check
       - name: CI Node Engine Check
         run: npm run ci:checkNodeEngine
   # check-lint:
