--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,7 @@
 name: ci
 on:
   push:
-    branches:
-      - master
+    branches: [ release, alpha, beta, next-major ]
   pull_request:
     branches:
       - '**'
