--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
     "regenerator-runtime": "0.13.8",
-    "semver": "7.3.4",
-    "typescript": "4.4.3"
+    "semver": "7.3.4"
   },
   "devDependencies": {
     "@actions/core": "1.2.6",
@@ -91,7 +90,6 @@
     "all-node-versions": "8.0.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
     "core-js": "3.6.5",
     "cross-env": "7.0.2",
     "css-loader": "3.5.2",
